# cpp_4sem

./: .gitignore  CMakeLists.txt  README.md
LivingWorld/: LivingWorld.cpp  Position.cpp  Position.h  World.cpp  World.h
LivingWorld/organisms/: Animal.cpp  Animal.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h
